Fix issue overlapped images

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -96,7 +96,7 @@ section{
 
 .first-section{
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background-image: url('../img/Bg2.jpg');
     background-position: center;
     background-repeat: no-repeat;
@@ -165,7 +165,7 @@ section{
 
 .second-section{
     background-color: rgba(51,51,51,1);
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .section-title{
@@ -281,14 +281,16 @@ section{
 
 .profile-description{
     color: white;
-    font-size: 2.3rem;
-    font-weight: 500;
+    font-size: 2rem;
+    font-weight: 300;
     font-family: var(--Montserrat);
+    margin: 20px 20px 30px 20px;
+    text-align: justify;
 }
 
 .third-section, .fourth-section{
     background-color: rgba(255,255,255,0.85);
-    height: 50vh;
+    min-height: 50vh;
 }
 
 .color-crimson{
@@ -305,6 +307,13 @@ section{
     align-items: center;
     flex-wrap: wrap;
     margin: 30px 0;
+}
+
+figcaption{
+    font-family: var(--Montserrat);
+    font-size: 1.3rem;
+    font-weight: 500;
+    text-align: center;
 }
 
 .skills-main-container .skill-img{
@@ -374,7 +383,7 @@ section{
     }
     
     .profile-data-career{
-        text-align: left;
+        text-align: left; 
     }
 
     .profile-data-info tr .profile-data-info-title{
@@ -392,7 +401,9 @@ section{
     .profile-data-info tr td a{
         font-size: 2rem;
     }
+}
 
+@media screen and (min-width: 1024px) {
     .skills-main-container .skill-img{
         width: 7vw;
         margin: 20px 20px;
